<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    android:theme="@style/ThemeOverlay.Projeto.FullscreenContainer"
    tools:context=".Login.LoginFragment"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="50sp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/emailWord"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/email_login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="70dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/passwordWord"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/password_Login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:password="true"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="40sp"
                android:layout_marginLeft="40sp"
                android:layout_marginEnd="40sp"
                android:layout_marginRight="40sp"
                android:layout_weight="1"
                android:text="@string/loginWord" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40sp"
                android:layout_marginRight="40sp"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/loginFragment_RegisterBtn"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="@string/registerWord"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>