<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    android:theme="@style/ThemeOverlay.Projeto.FullscreenContainer"
    tools:context=".register.ui.RegisterAgeFragment">

    <Button
        android:id="@+id/registerAge_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continueWord"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/DescriptionContainer"
        android:layout_width="400dp"
        android:layout_height="275dp"
        android:layout_marginTop="56dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nameUpperText"
            android:layout_width="313dp"
            android:layout_height="83dp"
            android:layout_marginBottom="50sp"
            android:gravity="bottom|left"
            android:text="@string/ageUpperText"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/ContainerData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/yearContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/age_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/yearText"
                    android:textColor="@color/white"
                    android:textSize="21sp" />

                <Spinner
                    android:id="@+id/yearSpinner"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:background="@android:color/holo_blue_light"
                    android:paddingRight="10sp"
                    android:spinnerMode="dialog"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/monthContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/month_Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/monthText"
                    android:textColor="@color/white"
                    android:textSize="21sp" />

                <Spinner
                    android:id="@+id/monthSpinner"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:background="@android:color/holo_blue_light"
                    android:paddingRight="10sp"
                    android:spinnerMode="dialog"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dayContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/day_Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/dayText"
                    android:textColor="@color/white"
                    android:textSize="21sp" />

                <Spinner
                    android:id="@+id/daySpinner"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:background="@android:color/holo_blue_light"
                    android:paddingRight="10sp"
                    android:spinnerMode="dialog"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>