<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout16"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    android:theme="@style/ThemeOverlay.Projeto.FullscreenContainer"
    tools:context=".Profile.UsersProfileFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="50sp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.16">

                <LinearLayout
                    android:id="@+id/ProfileImageContainer"
                    android:layout_width="141dp"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/postProfileImage"
                        android:layout_width="82dp"
                        android:layout_height="84dp"
                        android:src="@drawable/ic_launcher_background"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />

                    <Button
                        android:id="@+id/send_message"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:text="@string/messageWord" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/InfoContainer"
                    android:layout_width="226dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/NameAndAge_Info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/Region_Info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp"
                        android:text="TextView"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/StatsContainer"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:id="@+id/posts"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/PostText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp"
                        android:gravity="center_horizontal"
                        android:text="@string/wordPost"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/postValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp"
                        android:gravity="center_horizontal"
                        android:text="@string/zeroWord"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Followers"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/followersText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp"
                        android:gravity="center_horizontal"
                        android:text="@string/wordFollowers"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/followersValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp"
                        android:gravity="center_horizontal"
                        android:text="@string/zeroWord"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Followed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/followedText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp"
                        android:gravity="center_horizontal"
                        android:text="@string/wordFollowed"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/followedValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5sp"
                        android:gravity="center_horizontal"
                        android:text="@string/zeroWord"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/StatsContainer">

                <androidx.gridlayout.widget.GridLayout
                    android:id="@+id/ContainerPosts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="50sp"
                    android:scrollbars="horizontal"
                    android:stretchMode="columnWidth"
                    app:columnCount="3">

                </androidx.gridlayout.widget.GridLayout>

            </FrameLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>